--- a/saludconciencia/src/sass/_base.scss
+++ b/saludconciencia/src/sass/_base.scss
@@ -11,6 +11,8 @@ $color-gray-dark-1: #333;
 $color-gray-dark-2: #777;
 $color-gray-dark-3: #999;
 
+:root{
+}
 html {
     font-size: 62.5%;   //1rem = 10px;
 }
