--- a/saludconciencia/src/sass/_components.scss
+++ b/saludconciencia/src/sass/_components.scss
@@ -74,3 +74,95 @@
     margin-left: auto;
     margin-right: 2rem;
 }
+
+
+
+
+///////////////////////////////////////////////////////
+// BLOGS RECIENTES
+
+.image-container {
+    height: 30rem;
+    background-color: #ccc;
+    display: flex;
+    &-first {
+        height: 100%;
+        flex: 0 0 60%;
+        border: 1px solid $color-gray-dark-1;
+        position: relative;
+    }
+
+    &-second {
+        height: 100%;
+        flex: 1;
+        border: 1px solid $color-gray-dark-1;
+        position: relative;
+    }
+
+    &__info {
+        position: absolute;
+        bottom: 0;
+        background: rgb(0,0,0);
+        background: rgba(0,0,0,0.5);
+        color: #fff;
+        width: 100%;
+        
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+
+        &-tags {
+            display: flex;
+            align-items: center;
+            justify-content: flex-start;
+            align-self: stretch;
+
+            &-item{
+                padding: 0 2rem;
+                background-color: $color-primary-blue;
+                border-radius: 10px;
+                cursor: pointer;
+                color: #fff;
+                
+                &:not(:last-child) {
+                    margin-right: 2rem;
+                }
+
+                &:first-child {
+                    margin-left: auto;
+                }
+
+                &:last-child {
+                    margin-right: auto;
+                }
+            }
+        }
+
+        &-title {
+            font-family: "Poppins",sans-serif;
+            font-size: 1.5rem;
+            margin: 0 auto;
+            margin-top: 5px;
+            padding-left: 2rem;
+        }
+
+        &__details {
+            font-family: "Poppins", sans-serif;
+            margin: 0 auto;
+        }
+
+        &-author {
+            font-size: 1rem;
+        }
+
+        &-date {
+            font-size: .6rem;
+        }
+    }
+}
+
+.imageCard {
+    height: 30rem;
+    width: 100%;
+    object-fit: cover;
+}
