--- a/saludconciencia/src/css/style.css
+++ b/saludconciencia/src/css/style.css
@@ -10,7 +10,8 @@ html {
   align-items: center;
   align-self: stretch;
   justify-content: center;
-  flex: 0 0 40%; }
+  flex: 0 0 40%;
+  flex-wrap: wrap; }
   .user-nav > * {
     padding: 0 2rem;
     cursor: pointer;
@@ -28,7 +29,8 @@ html {
   display: flex;
   align-items: center;
   align-self: stretch;
-  justify-content: space-evenly; }
+  justify-content: space-evenly;
+  flex-wrap: wrap; }
   .user__icons-item-icon {
     height: 2.25rem;
     width: 2.25rem;
@@ -49,9 +51,11 @@ html {
   margin-right: 2rem; }
 
 .image-container {
-  height: 30rem;
-  background-color: #ccc;
+  min-height: 30rem;
   display: flex; }
+  @media screen and (max-width: 768px) {
+    .image-container {
+      flex-direction: column; } }
   .image-container-first {
     height: 100%;
     flex: 0 0 60%;
@@ -62,6 +66,9 @@ html {
     flex: 1;
     border: 1px solid #333;
     position: relative; }
+    @media screen and (max-width: 768px) {
+      .image-container-second {
+        margin-top: 1rem; } }
   .image-container__info {
     position: absolute;
     bottom: 0;
@@ -76,13 +83,15 @@ html {
       display: flex;
       align-items: center;
       justify-content: flex-start;
-      align-self: stretch; }
+      align-self: stretch;
+      flex-wrap: wrap; }
       .image-container__info-tags-item {
         padding: 0 2rem;
         background-color: #0070BA;
         border-radius: 10px;
         cursor: pointer;
-        color: #fff; }
+        color: #fff;
+        margin-top: .7rem; }
         .image-container__info-tags-item:not(:last-child) {
           margin-right: 2rem; }
         .image-container__info-tags-item:first-child {
@@ -108,11 +117,28 @@ html {
   width: 100%;
   object-fit: cover; }
 
+.card-image {
+  position: relative;
+  min-height: 15rem; }
+  @media screen and (max-width: 768px) {
+    .card-image {
+      max-height: 34rem; } }
+  .card-image__tags {
+    display: flex;
+    align-items: flex-end;
+    flex-wrap: wrap;
+    align-content: flex-end; }
+    .card-image__tags-item {
+      margin-right: 1rem;
+      margin-top: .7rem; }
+  .card-image__img {
+    height: 100%; }
+
 .header {
   font-family: "Poppins", sans-serif;
   font-size: 1.86rem;
   font-weight: 300;
-  height: 7rem;
+  min-height: 7rem;
   background-color: #f0eeee;
   border-bottom: 1px solid #000;
   display: flex;
