--- a/saludconciencia/src/sass/_components.scss
+++ b/saludconciencia/src/sass/_components.scss
@@ -15,6 +15,8 @@
     align-self: stretch;
     justify-content: center;
     flex: 0 0 40%;
+    //Temporal FIX!!
+    flex-wrap: wrap;
 
     & > * {
         padding: 0 2rem;
@@ -43,6 +45,9 @@
     align-items: center;
     align-self: stretch;
     justify-content: space-evenly;
+
+    //Temporal FIX!!
+    flex-wrap: wrap;
 
     &-item-icon {
         height: 2.25rem;
@@ -82,9 +87,13 @@
 // BLOGS RECIENTES
 
 .image-container {
-    height: 30rem;
-    background-color: #ccc;
+    min-height: 30rem;  //Permite que en el media query se adapte bien
     display: flex;
+
+    @media screen and (max-width: 768px) {
+        flex-direction: column;
+    }
+
     &-first {
         height: 100%;
         flex: 0 0 60%;
@@ -97,6 +106,10 @@
         flex: 1;
         border: 1px solid $color-gray-dark-1;
         position: relative;
+        
+        @media screen and (max-width: 768px) {
+            margin-top: 1rem;
+        }
     }
 
     &__info {
@@ -116,6 +129,7 @@
             align-items: center;
             justify-content: flex-start;
             align-self: stretch;
+            flex-wrap: wrap;
 
             &-item{
                 padding: 0 2rem;
@@ -123,6 +137,7 @@
                 border-radius: 10px;
                 cursor: pointer;
                 color: #fff;
+                margin-top: .7rem;
                 
                 &:not(:last-child) {
                     margin-right: 2rem;
@@ -165,4 +180,29 @@
     height: 30rem;
     width: 100%;
     object-fit: cover;
+}
+
+.card-image {
+    position: relative;
+    min-height: 15rem;
+
+    @media screen and (max-width: 768px) {
+        max-height: 34rem;
+    }
+
+    &__tags {
+        display: flex;
+        align-items: flex-end;
+        flex-wrap: wrap;
+        align-content: flex-end;
+
+        &-item {
+            margin-right: 1rem;
+            margin-top: .7rem;
+        }
+    }
+
+    &__img {
+        height: 100%;
+    }
 }
