--- a/saludconciencia/src/sass/_layout.scss
+++ b/saludconciencia/src/sass/_layout.scss
@@ -2,10 +2,13 @@
     font-family: "Poppins", sans-serif;
     font-size: 1.86rem; //14pts = 18.66px
     font-weight: 300;
-    height: 7rem;
+    min-height: 7rem;
     background-color: $color-gray-light-3;
     border-bottom: 1px solid #000;
 
     display: flex;
     align-items: center;
+
+    //temporal fix!!!
+    //flex-wrap: wrap;
 }
