--- a/saludconciencia/src/sass/_components.scss
+++ b/saludconciencia/src/sass/_components.scss
@@ -115,34 +115,6 @@
 
 ///////////////////////////////////////////////////////
 // SEARCH
-/*
-    -webkit-box-flex: 0;
-    -ms-flex: 0 0 40%;
-    flex: 0 0 40%;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    justify-content: center;
-
-    input
-        font-family: inherit;
-    font-size: inherit;
-    color: inherit;
-    background-color: var(--color-grey-light-2);
-    border: none;
-    padding: .7rem 2rem;
-    border-radius: 100px;
-    width: 90%;
-    -webkit-transition: all .2s;
-    transition: all .2s;
-    margin-right: -3.25rem;
-}
-*/
 .search {
     margin-right: 2rem;
     display: flex;
@@ -324,3 +296,154 @@
 
 ///////////////////////////////////////////////////////
 // BLOGS RECIENTES
+
+
+
+
+
+////////////////////////////////////////
+// ADMIN
+
+////////////////////////////////////////
+// SIDE NAVIGATION
+.side-nav {
+    font-size: 1.4rem;
+    list-style: none;
+    //margin-top: 3.5rem;
+    margin: 0;
+    padding: 0;
+    margin-bottom: auto;
+    margin-top: 2rem;
+
+    &__item {
+        position: relative;
+
+        &:not(:last-child) {
+            margin-bottom: .5rem;
+        }
+    }
+
+    &__item::before {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        height: 100%;
+        width: 3px;
+        background-color: $color-primary-green;
+        transform: scaleY(0);
+        transition: transform .2s,
+                    width .4s cubic-bezier(1,0,0,1) .2s,
+                    background-color .1s;
+    }
+
+    &__item:hover::before,
+    &__item--active::before {
+        transform: scaleY(1);
+        width: 100%;
+    }
+
+    &__item:active::before {
+        background-color: lighten($color-primary-green, 5%);
+    }
+
+    &__link:link,
+    &__link:visited {
+        color: $color-gray-light-1;
+        text-decoration: none;
+        text-transform: uppercase;
+        display: block;
+        padding: 1.5rem 3rem;
+        position: relative;
+        z-index: 10;
+
+        display: flex;
+        align-items: center;
+    }
+
+    &__icon {
+        width: 1.75rem;
+        height: 1.75rem;
+        margin-right: 2rem;
+        //fill: currentColor;
+        stroke: currentColor;
+        stroke-width: 2px;
+        &-article{
+            width: 1.75rem;
+            height: 1.75rem;
+            margin-right: 2rem;
+            stroke: none;
+            fill: currentColor;
+        }
+    }
+}
+
+////////////////////////////////////////
+// SIDEBAR CONTAINER
+
+.sidebar {
+    &__header {
+        padding-top: 2rem;
+
+        display: flex;
+        justify-content: space-around;
+        &-logo {
+            height: 3rem;
+            &-sm {
+                height: 3rem;
+                display: none;
+            }
+        }
+
+        &-icon {
+            cursor: pointer;
+            &-item{
+                height: 2.25rem;
+                width: 2.25rem;
+                fill: none;
+                stroke: $color-primary-green;
+                stroke-width: 2px;
+
+                &:hover {
+                    stroke: lighten($color-primary-green, 5%);
+                }
+            }
+        }
+    }
+}
+
+////////////////////////////////////////
+// LEGAL TEXT
+.legal {
+    font-size: 1.2rem;
+    color: $color-gray-light-3;
+    text-align: center;
+    padding: 2.5rem;
+}
+
+////////////////////////////////////////
+// SIDEBAR MODAL
+
+.settings__modal {
+    &-user{}
+    
+    &__sidebarSetting{
+        display: flex;
+        &-text{}
+        &__checkbox{
+
+            &-icon {
+                cursor: pointer;
+                height: 2.25rem;
+                width: 2.25rem;
+                fill: $color-gray-dark-1;
+                stroke-width: 2px;
+
+                &:hover {
+                    fill: $color-primary-green;
+                    //stroke-width: 1px;
+                }
+            }
+        }
+    }
+}
