--- a/saludconciencia/src/sass/_layout.scss
+++ b/saludconciencia/src/sass/_layout.scss
@@ -23,3 +23,62 @@
         flex-wrap: wrap;
     }
 }
+
+
+.content {
+    height: 100vh;
+    display: flex;
+    margin: 0;
+    padding: 0;
+
+    &__main {
+        flex: 1;
+    }
+}
+
+.sidebar {
+    background-color: $color-gray-dark-1;
+
+    flex: 0 0 18%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    position: sticky;
+
+    //transition: flex-basis .2s;
+
+    &:not(:hover) {
+        flex: 0 0 5%;
+        
+        & > :only-of-type span {
+            display: none;
+        }
+
+        & > :only-of-type a {
+            padding: 1.5rem 0;
+            justify-content: center;
+        }
+
+        .side-nav {
+            display: flex;
+            flex-direction: column;
+
+            &__icon {
+                //display: flex;
+                margin: 0;
+            }
+        }
+
+        .legal{
+            display: none;
+        }
+
+        .sidebar__header-logo {
+            display: none;
+            &-sm {
+                display: block;
+            }
+        }
+    }
+}
+
