--- a/saludconciencia/src/css/style.css
+++ b/saludconciencia/src/css/style.css
@@ -331,26 +331,77 @@ html {
 
 .headerTitle {
   padding: 3rem 1.5rem;
-  border: 1px solid black; }
+  border: 1px solid black;
+  font-family: "Poppins", sans-serif; }
   .headerTitle__title {
     flex: 1;
     display: flex;
     justify-content: flex-start; }
     .headerTitle__title-title {
-      flex: 0 0 20%;
+      flex: 1;
       align-self: center;
-      font-size: 2rem;
+      font-size: 2.5rem;
+      font-weight: 600;
       text-transform: uppercase;
       text-align: center;
       padding: 0 2.5rem; }
     .headerTitle__title-input {
       font-size: 2rem;
       text-align: center;
+      flex: 0 0 70%;
       background-color: #f0eeee;
       border: none;
       padding: .7rem 2rem;
+      margin-right: 15rem;
       border-radius: 100px;
-      width: 80%; }
+      width: 80%;
+      transition: all .2s; }
+      .headerTitle__title-input:focus {
+        outline: none;
+        background-color: #e6e3e3; }
+  .headerTitle__imgPortada {
+    display: flex;
+    flex-direction: column; }
+    .headerTitle__imgPortada-top {
+      display: flex;
+      flex: 1;
+      justify-content: flex-start;
+      margin: 1.5rem 0; }
+    .headerTitle__imgPortada-title {
+      flex: 1;
+      align-self: center;
+      font-size: 2rem;
+      font-weight: 600;
+      text-transform: uppercase;
+      text-align: center;
+      padding: 0 2.5rem; }
+    .headerTitle__imgPortada-input {
+      font-size: 2rem;
+      text-align: center;
+      flex: 0 0 70%;
+      align-self: center;
+      background-color: #f0eeee;
+      border: none;
+      padding: .7rem 2rem;
+      margin-right: 15rem;
+      border-radius: 100px;
+      width: 80%;
+      transition: all .2s; }
+      .headerTitle__imgPortada-input:focus {
+        outline: none;
+        width: 100%;
+        background-color: #e6e3e3; }
+
+.preview-off {
+  display: none; }
+
+.preview-on {
+  display: block;
+  align-self: center; }
+
+.imgPreview {
+  height: 32rem;
+  width: 48rem; }
 
 .footerButtons {
   display: flex;
