--- a/saludconciencia/src/css/style.css
+++ b/saludconciencia/src/css/style.css
@@ -272,59 +272,6 @@ html {
     .settings__modal__sidebarSetting__checkbox-icon:hover {
       fill: #00BE00; }
 
-/*
-.search {
-    margin-right: 2rem;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-
-    
-    &__form {
-        @media screen and (max-width: 768px) {
-            display: flex;
-            flex: 0 0 40%;
-            justify-content: center;
-        }
-    }
-
-    &__input {
-        //width: inherit;
-        background-color: darken($color-gray-light-3, 7%);
-        border: none;
-        padding: .7rem 2rem;
-        border-radius: 100px;
-        width: 90%;
-        margin-right: -3.25rem;
-        transition: all .2s;
-
-        &:focus {
-            outline: none;
-            width: 100%;
-            background-color: darken($color-gray-light-3,4%);
-        }
-    }
-
-    &__input:focus + &__button {
-        background-color: darken($color-gray-light-3,4%);
-    }
-
-    &__button {
-        border: none;
-        background-color: darken($color-gray-light-3, 7%);
-        padding: 0;
-        transition: all .2s;
-
-        &:focus {
-            outline: none;
-        }
-
-        &:active {
-            transform: translateY(2px);
-        }
-    }
-}
-*/
 .blogForm {
   display: flex;
   flex-direction: column; }
@@ -332,7 +279,7 @@ html {
 .headerTitle {
   padding: 3rem 1.5rem;
   border: 1px solid black;
-  font-family: "Poppins", sans-serif; }
+  font-family: "Lexend", sans-serif; }
   .headerTitle__title {
     flex: 1;
     display: flex;
@@ -396,7 +343,7 @@ html {
     flex-direction: column; }
 
 .tags__show {
-  font-size: 2rem;
+  font-size: 1.6rem;
   display: flex;
   justify-content: center;
   align-items: center; }
@@ -469,15 +416,17 @@ html {
   width: 48rem; }
 
 .footerButtons {
+  margin-bottom: 3rem;
   display: flex;
-  justify-content: space-between; }
+  justify-content: center; }
   .footerButtons__btn {
+    padding: .5rem 1.5rem;
+    margin: 0 5rem;
     font-size: 1.5rem;
-    font-weight: 400;
+    font-weight: 600;
     text-transform: uppercase;
     border-radius: 100px;
     border: none;
-    padding: .5rem 1.5rem;
     color: #fff;
     display: flex;
     align-items: center; }
@@ -489,6 +438,19 @@ html {
     margin-right: 1rem; }
   .footerButtons__publish-icon {
     margin-right: 1rem; }
+
+.editorJS__container {
+  background: #fff;
+  padding: 7rem 1rem; }
+
+.editorJS {
+  font-family: "Lexend", "Poppins", sans-serif;
+  font-size: 1.5rem;
+  min-height: 85rem;
+  padding: 3rem 0;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px; }
+  .editorJS > :only-of-type h1, .editorJS > :only-of-type .h1, .editorJS h2, .editorJS .h2, .editorJS h3, .editorJS .h3, .editorJS h4, .editorJS .h4, .editorJS h5, .editorJS .h5, .editorJS h6, .editorJS .h6 {
+    font-weight: 600; }
 
 .header {
   font-family: "Poppins", sans-serif;
