--- a/saludconciencia/src/sass/_components.scss
+++ b/saludconciencia/src/sass/_components.scss
@@ -565,8 +565,12 @@
                 background-color: $color-primary-blue;
                 border-radius: 100px;
                 padding: .3rem 2rem;
-                &:not(:last-child){
-                    margin-bottom: 2rem;
+                // &:not(:last-child){
+                    // }
+                    &-overflow {
+                        &:not(:last-child) {
+                            margin-bottom: 2rem;
+                    }
                 }
                 color: #fff;
                 position: relative;
