--- a/saludconciencia/src/css/style.css
+++ b/saludconciencia/src/css/style.css
@@ -549,6 +549,9 @@ html {
   background-color: #fff;
   box-shadow: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.22); }
 
+.blogBoxShadow {
+  box-shadow: #26394d 0px 20px 30px -10px; }
+
 /*
     BOOTSTRAP CHANGE
 */
