--- a/saludconciencia/src/sass/_layout.scss
+++ b/saludconciencia/src/sass/_layout.scss
@@ -88,6 +88,7 @@
 }
 
 
+//Editar blog
 .blogContainer {
     background-image: linear-gradient(to right bottom, #FF3366, #BA265D);
     min-height: 100vh;
@@ -99,4 +100,10 @@
     flex: 1;
     background-color: #fff;
     box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
+}
+
+//Blogs publicados
+
+.blogBoxShadow {
+    box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
 }
