Agregada funcion para subir la imagen a CrearBlog
Se puede escoger desde la PC un archivo como imgPortada y se sube a firestore bajo este patron
/blogs/$idblog/imgportada

Problema: Si no se termina el blog por equis razon y no se guarda o publica ... se queda ahi guardado.

Tal vez pueda implementarse esto para el editorJS sin necesidad de usar nodejs en heroku.

--- a/saludconciencia/src/css/style.css
+++ b/saludconciencia/src/css/style.css
@@ -315,17 +315,17 @@ html {
       justify-content: flex-start;
       margin: 1.5rem 0; }
     .headerTitle__imgPortada-title {
-      flex: 1;
       align-self: center;
       font-size: 2rem;
       font-weight: 600;
       text-transform: uppercase;
       text-align: center;
-      padding: 0 2.5rem; }
+      padding: 0 2.5rem;
+      flex: 0 0 20%; }
     .headerTitle__imgPortada-input {
       font-size: 2rem;
       text-align: center;
-      flex: 0 0 70%;
+      flex: 0 0 80%;
       align-self: center;
       background-color: #f0eeee;
       border: none;
@@ -341,7 +341,8 @@ html {
   .headerTitle__descripcion {
     flex: 1;
     display: flex;
-    justify-content: flex-start; }
+    justify-content: flex-start;
+    margin-top: 2rem; }
     .headerTitle__descripcion-title {
       flex: 1;
       align-self: center;
