--- a/saludconciencia/src/css/style.css
+++ b/saludconciencia/src/css/style.css
@@ -484,6 +484,79 @@ html {
   .editorJS > :only-of-type h1, .editorJS > :only-of-type .h1, .editorJS h2, .editorJS .h2, .editorJS h3, .editorJS .h3, .editorJS h4, .editorJS .h4, .editorJS h5, .editorJS .h5, .editorJS h6, .editorJS .h6 {
     font-weight: 600; }
 
+.showBlog__header {
+  min-height: 15rem;
+  margin-top: -15rem;
+  background-color: #fff;
+  position: relative;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  padding: 3rem 6rem;
+  display: flex;
+  flex-direction: column; }
+  .showBlog__header__title {
+    font-family: 'Lexend';
+    font-weight: 700;
+    font-size: 3.5rem;
+    margin-top: 2rem; }
+  .showBlog__header__autor {
+    margin-top: 2rem;
+    display: flex;
+    align-items: center; }
+    .showBlog__header__autor-img {
+      width: 5rem;
+      height: auto;
+      border-radius: 100px;
+      border: 1px solid black; }
+    .showBlog__header__autor__info {
+      margin-left: 2rem;
+      font-size: 1.5rem; }
+      .showBlog__header__autor__info-fecha {
+        color: #757575; }
+      .showBlog__header__autor__info-name > span {
+        font-weight: 600; }
+  .showBlog__header__tags {
+    display: flex;
+    align-items: center; }
+    .showBlog__header__tags-item {
+      border-radius: 100px;
+      background-color: #0070BA;
+      padding: .5rem 1.5rem;
+      color: #fff;
+      text-transform: uppercase;
+      font-weight: 600;
+      letter-spacing: 1px;
+      cursor: pointer; }
+      .showBlog__header__tags-item:not(:first-child) {
+        margin-left: 2rem; }
+      .showBlog__header__tags-item:hover {
+        background-color: #007fd4; }
+
+.showBlog__contenido__portada {
+  width: 100%;
+  height: 45rem; }
+  .showBlog__contenido__portada-img {
+    width: 100%;
+    max-height: 100%;
+    object-fit: cover;
+    top: 0;
+    left: 0;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px; }
+
+.showBlog__main {
+  z-index: 4;
+  font-family: 'Poppins'; }
+
+.showBlog__article__post {
+  background-color: #fff;
+  position: relative;
+  padding: 0rem 6rem;
+  font-size: 1.8rem; }
+
+.content-width {
+  max-width: 992px;
+  margin-left: auto;
+  margin-right: auto; }
+
 .header {
   font-family: "Poppins", sans-serif;
   font-size: 1.86rem;
@@ -552,6 +625,9 @@ html {
 
 .blogBoxShadow {
   box-shadow: #26394d 0px 20px 30px -10px; }
+
+.showBlog__contenido {
+  position: relative; }
 
 /*
     BOOTSTRAP CHANGE
