--- a/saludconciencia/src/sass/_components.scss
+++ b/saludconciencia/src/sass/_components.scss
@@ -764,14 +764,119 @@
 }
 
 
-.codex-editor {
-    &__redactor {
-        //padding-bottom: 10rem !important;
+// .codex-editor {
+//     &__redactor {
+//         //padding-bottom: 10rem !important;
+//     }
+// }
+
+// .ce-block {
+//     &__content {
+//         //border-radius: 100px;
+//     }
+// }
+
+////////////////////////////////////////
+// BLOG SHOW
+
+.showBlog__header {
+    min-height: 15rem;
+    margin-top: -15rem;
+    background-color: #fff;
+    position: relative;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    padding: 3rem 6rem;
+    display: flex;
+    flex-direction: column;
+
+    &__title{
+        font-family: 'Lexend';
+        font-weight: 700;
+        font-size: 3.5rem;
+        margin-top: 2rem;
+    }
+
+    &__autor {
+        margin-top: 2rem;
+        display: flex;
+        align-items: center;
+        &-img{
+            width: 5rem;
+            height: auto;
+            border-radius: 100px;
+            border: 1px solid black;
+        }
+        &__info{
+            margin-left: 2rem;
+            font-size: 1.5rem;
+            &-fecha{
+                color: rgb(117,117,117);
+            }
+
+            &-name > span{
+                //text-transform: uppercase;
+                //font-size: 2rem;
+                font-weight: 600;
+            }
+        }
+    }
+
+    &__tags{
+        display: flex;
+        align-items: center;
+
+        &-item {
+            border-radius: 100px;
+            background-color: $color-primary-blue;
+            padding: .5rem 1.5rem;
+            color: #fff;
+            text-transform: uppercase;
+            font-weight: 600;
+            letter-spacing: 1px;
+            cursor: pointer;
+            &:not(:first-child){
+                margin-left: 2rem;
+            }
+            &:hover{
+                background-color: lighten($color-primary-blue, 5%);
+            }
+        }
     }
 }
 
-.ce-block {
-    &__content {
-        //border-radius: 100px;
+.showBlog__contenido__portada {
+    width: 100%;
+    height: 45rem;
+    
+    &-img {
+        width: 100%;
+        max-height: 100%;
+        object-fit: cover;
+        //position: absolute;
+        top: 0;
+        left: 0;
+        box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
     }
+}
+
+.showBlog__main{
+    //background-color: #fff;
+    z-index: 4;
+    font-family: 'Poppins';
+}
+
+.showBlog__article__post {
+    background-color: #fff;
+    position: relative;
+    padding: 0rem 6rem;
+    font-size: 1.8rem;
+    &-item {
+        
+    }
+}
+
+.content-width {
+    max-width: 992px;
+    margin-left: auto;
+    margin-right: auto;
 }
