Mostrar contenido del blog 80%
Falta terminar los componentes faltantes: lista, quote, table y embed

Falta, también, el boton de share.

--- a/saludconciencia/src/sass/_components.scss
+++ b/saludconciencia/src/sass/_components.scss
@@ -784,7 +784,8 @@
     margin-top: -15rem;
     background-color: #fff;
     position: relative;
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    //box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    box-shadow: rgba(0, 0, 0, 0.1) 0 -23px 25px, rgba(0, 0, 0, 0.08) 0 -2px 2px 0;
     padding: 3rem 6rem;
     display: flex;
     flex-direction: column;
@@ -859,19 +860,21 @@
     }
 }
 
+//Article
 .showBlog__main{
     //background-color: #fff;
     z-index: 4;
     font-family: 'Poppins';
+    font-size: 1rem;
 }
 
 .showBlog__article__post {
     background-color: #fff;
     position: relative;
     padding: 0rem 6rem;
-    font-size: 1.8rem;
+    font-size: 1.5rem;
     &-item {
-        
+        margin-bottom: 2rem;
     }
 }
 
@@ -879,4 +882,13 @@
     max-width: 992px;
     margin-left: auto;
     margin-right: auto;
+}
+
+.article__img {
+    display: flex;
+    flex-direction: column;
+    & > span {
+        font-size: 1.2rem;
+        color: rgb(117,117,117)
+    }
 }
